# tap-algolia

./: CLAUDE.md  README.md  meltano.yml  pyproject.toml  tox.ini
tap_algolia/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_algolia/schemas/: __init__.py  click_through_rate.json  no_click_rate.json  no_clicks_searches.json  no_results_rate.json  no_results_searches.json  searches_count.json  top_searches.json  users_count.json
tests/: __init__.py  test_core.py
